Remove unnecessary add-opens jvm arg in additional test tasks